Changes file for Dist-Zilla-PluginBundle-GENEHACK

{{$NEXT}}

0.3       2011-09-27 09:09:04 America/New_York

    * Deal with deprecated modules

0.2       2011-07-08 21:38:14 America/New_York

    * Add GithubMeta

0.1       2011-04-22 17:11:01 America/New_York

    * Remove GitFmtChanges
    * Add CheckContentHasChanges
    * change first_version to 0.1
      - also fix stupid typo...

0.04

    Hadn't been maintaining Changes file. Bad coder, no cookie.